--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Salom dunyo</h1>
+<html>
+  <head>
+    <title>Bu sayt barcha uchun</title>
+  </head>
+  <body>
+    <h1>salom dunyo</h1>
+  </body>
+</html>
